Fix labels gap issue.

--- a/public/styles/site/authorPost.less
+++ b/public/styles/site/authorPost.less
@@ -59,9 +59,9 @@
       line-height: 1;
       left: 0;
       top: 0;
+      .display-flex;
 
       .label {
-        display: inline-block;
         background-color: #333;
         color: #FFF;
         padding: .3em .6em;
